--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,25 @@
 * {
     padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-body{
-    background-color: black;
+html {
+    font-size: 16px;
+}
+
+body {
+    background-color: #222;
     color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-p {
-    border: 2px solid red;
+.grid-container {
+
+}
+
+.grid-box {
+    background-color: rgb(128, 191, 255);
+    border: 3px solid rgb(2, 85, 168);
+    padding: 2rem;
 }
